# idsort

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  sortm.cpp  sortm.hpp
analyzer/: CMakeLists.txt
analyzer/include/analyzer/: sortinfo.hpp  writesort.hpp
analyzer/src/: sortinfo.cpp  writesort.cpp
argh/: argh.hpp
flow/: flow.hpp
parseopt/: CMakeLists.txt
parseopt/include/parseopt/: field.hpp  opterr.hpp  parseutil.hpp
parseopt/src/: field.cpp  opterr.cpp  parseutil.cpp
